# Back_End

./: README.md  index.html  influx.html  mqtt.html  pyproject.toml  rest_api_standard.html  robots.txt  search.json  settings.ini  sitemap.xml
Back_End/: _modidx.py
Databases/: 0_postgresql.html  1_postgresql_setup.html  1_timescaledb.html  2_timescaledb.html  duckdb.html  mysql_&_mariadb.html  postgresql.html  redis.html  sql.html  sqlite.html
Databases/PostgreSQL/: postgresql.html  postgresql_setup.html  pqsl_extensions.html  timescaledb.html
Django/: 0_admin.html  0_authentication.html  0_custom_commands.html  0_forms.html  0_models_design.html  0_permissions.html  0_query_filters.html  0_users.html  1_admin_unfold.html  1_allauth_users.html  1_crispy_forms.html  1_django_commands.html  1_drf_basic.html  1_permission_rules.html  1_querysets.html  1_rules.html  1_save_objects.html  1_security.html  2_drf_quickstart.html  2_jsonfield.html  2_permission _types.html  2_query_maths.html  3_drf_tutorial.html  admin.html  allauth_users.html  authentication.html  backups.html  celery.html  channels.html  crispy_forms.html  custom_commands.html  datatables.html  django_basics.html  django_constance.html  django_mail.html  django_q.html  django_stack.html  django_templates.html  django_x.html  drf_basic.html  (+24 more)
_proc/: 01_Influx.ipynb  02_MQTT.ipynb  03_REST_API_Standard.ipynb  index.ipynb
_proc/Databases/: 00_SQL.ipynb  02_MySQL_&_MariaDB.ipynb  03_SQLite.ipynb  04_Redis.ipynb  (+1 more)
nbs/: 01_Influx.ipynb  02_MQTT.ipynb  03_REST_API_Standard.ipynb  index.ipynb  nbdev.yml
(+159 files in other folders)
